fix z-index of button

--- a/lens-composer.css
+++ b/lens-composer.css
@@ -136,6 +136,7 @@ paper-dropdown-menu /deep/ core-icon {
   margin: 0px auto;
   text-align: center;
   z-index: 100;
+  position: relative;
   height: 15px;
   transition: position 0.5s ease-in-out, height 0.5s ease-in-out, transform 0.1s ease-out; 
 }
